[package]
name = "exocdn"
version = "1.0.1"
edition = "2021"
publish = false
authors = ["Exotic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", default-features = false, features = ["tracing", "http1", "http2", "form"] }
axum-server = { version = "0.5", default-features = false, features = ["tls-rustls"] }
rustls = { version = "0.21", default-features = false, features = ["tls12"] }
tokio = { version = "1.33", default-features = false, features = ["macros", "rt-multi-thread", "parking_lot"] }
parking_lot = { version = "0.12", default-features = false, features = ["hardware-lock-elision"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.4", default-features = false, features = ["trace", "compression-full", "fs"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "registry", "smallvec", "parking_lot"] }
tracing-appender = { version = "0.2", default-features = false, features = ["parking_lot"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std", "alloc"] }
blake3 = { version = "1.5", default-features = false, features = ["std"] }
walkdir = { version = "2.4", default-features = false }
dashmap = { version = "5.5", default-features = false, features = ["inline", "serde"] }
ahash = { version = "0.8", default-features = false, features = ["std", "runtime-rng"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[lints]
clippy.unwrap_used = "warn"
clippy.nursery = "warn"

[dev-dependencies]
reqwest = { version = "0.11" }
futures = { version = "0.3", default-features = false }

[profile.release]
strip = true
opt-level = 3
debug = 0
lto = true
panic = "abort"
overflow-checks = false
debug-assertions = false
codegen-units = 1
incremental = false