cargo-features = ["trim-paths", "panic-immediate-abort"]

[package]
name = "exocdn"
version = "1.0.7"
edition = "2024"
publish = false
authors = ["Exotic"]

[features]
compression = ["tower-http/compression-full"]

[dependencies]
axum = { version = "0.8", default-features = false, features = [
    "tracing",
    "http1",
    "http2",
    "form",
] }
axum-server = { version = "0.8", default-features = false, features = [
    "tls-rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
    "ring",
    "tls12",
    "read_buf",
] }
tokio = { version = "1.49", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
parking_lot = { version = "0.12", default-features = false, features = [
    "hardware-lock-elision",
] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = [
    "trace",
    "fs",
] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "registry",
    "smallvec",
    "parking_lot",
] }
tracing-appender = { version = "0.2", default-features = false, features = [
    "parking_lot",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
    "alloc",
] }
blake3 = { version = "1.8", default-features = false, features = [
    "std",
    "mmap",
] }
walkdir = { version = "2.5", default-features = false }
dashmap = { version = "6.1", default-features = false, features = [
    "inline",
    "serde",
] }
ahash = { version = "0.8", default-features = false, features = [
    "std",
    "runtime-rng",
] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "std"] }
snmalloc-rs = { version = "0.3", default-features = false, features = [
    "build_cc",
    "lto",
    "usewait-on-address",
] }

[lints]
clippy.unwrap_used = "warn"
clippy.nursery = { level = "warn", priority = -1 }

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["form"]}
futures = { version = "0.3", default-features = false }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "z"
debug = 0

[profile.release]
strip = true
opt-level = 3
debug = 0
lto = true
panic = "immediate-abort"
overflow-checks = false
debug-assertions = false
codegen-units = 1
incremental = false
trim-paths = true
